bokeh plot to html

--- a/sentiment_analysis_Twitch.ipynb
+++ b/sentiment_analysis_Twitch.ipynb
@@ -1514,9 +1514,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 517
         },
-        "outputId": "7742a0a8-0836-4f68-ce5c-e86c7644841f"
+        "outputId": "93f7bfa7-45d2-4273-de90-949e962f609b"
       },
       "source": [
+        "from bokeh.plotting import output_file\n",
         "x = [i for i in range(1,11)]\n",
         "y = history['val_acc']\n",
         "p = figure(plot_height=500, plot_width=1000,\n",
@@ -1533,9 +1534,11 @@
         "p.yaxis.major_label_text_font_size = \"15pt\"\n",
         "p.xaxis.axis_label_text_font_size = \"20pt\"\n",
         "p.xaxis.major_label_text_font_size = \"15pt\"\n",
+        "\n",
+        "output_file(\"val_acc.html\", title=\"Validation Accuracy by Epoch\")\n",
         "show(p)"
       ],
-      "execution_count": 67,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1852,7 +1855,7 @@
               "\n",
               "\n",
               "\n",
-              "  <div class=\"bk-root\" id=\"81296d9f-f5a5-4e36-af60-c56ff65a9394\" data-root-id=\"2535\"></div>\n"
+              "  <div class=\"bk-root\" id=\"2f11156d-6b6f-4998-a3a4-da1a8b422186\" data-root-id=\"3114\"></div>\n"
             ]
           },
           "metadata": {
@@ -1866,8 +1869,8 @@
               "(function(root) {\n",
               "  function embed_document(root) {\n",
               "    \n",
-              "  var docs_json = {\"de2dcc81-ff20-4a2a-b31a-9decded8c392\":{\"roots\":{\"references\":[{\"attributes\":{\"below\":[{\"id\":\"2546\"}],\"center\":[{\"id\":\"2549\"},{\"id\":\"2553\"}],\"left\":[{\"id\":\"2550\"}],\"plot_height\":500,\"plot_width\":1000,\"renderers\":[{\"id\":\"2560\"}],\"title\":{\"id\":\"2536\"},\"toolbar\":{\"id\":\"2555\"},\"x_range\":{\"id\":\"2538\"},\"x_scale\":{\"id\":\"2542\"},\"y_range\":{\"id\":\"2540\"},\"y_scale\":{\"id\":\"2544\"}},\"id\":\"2535\",\"subtype\":\"Figure\",\"type\":\"Plot\"},{\"attributes\":{\"axis\":{\"id\":\"2550\"},\"dimension\":1,\"ticker\":null},\"id\":\"2553\",\"type\":\"Grid\"},{\"attributes\":{},\"id\":\"2538\",\"type\":\"DataRange1d\"},{\"attributes\":{},\"id\":\"2544\",\"type\":\"LinearScale\"},{\"attributes\":{},\"id\":\"2551\",\"type\":\"BasicTicker\"},{\"attributes\":{\"axis_label\":\"Validation Accuracy\",\"axis_label_text_font_size\":\"20pt\",\"formatter\":{\"id\":\"2657\"},\"major_label_text_font_size\":\"15pt\",\"minor_tick_line_color\":null,\"ticker\":{\"id\":\"2551\"}},\"id\":\"2550\",\"type\":\"LinearAxis\"},{\"attributes\":{},\"id\":\"2542\",\"type\":\"LinearScale\"},{\"attributes\":{},\"id\":\"2540\",\"type\":\"DataRange1d\"},{\"attributes\":{\"active_drag\":\"auto\",\"active_inspect\":\"auto\",\"active_multi\":null,\"active_scroll\":\"auto\",\"active_tap\":\"auto\",\"tools\":[{\"id\":\"2554\"}]},\"id\":\"2555\",\"type\":\"Toolbar\"},{\"attributes\":{\"text\":\"Validation Accuracy by Epoch\",\"text_font_size\":{\"value\":\"20pt\"}},\"id\":\"2536\",\"type\":\"Title\"},{\"attributes\":{},\"id\":\"2554\",\"type\":\"SaveTool\"},{\"attributes\":{},\"id\":\"2655\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{\"data\":{\"x\":[1,2,3,4,5,6,7,8,9,10],\"y\":[0.5508055686950684,0.5596944689750671,0.5660971999168396,0.5687222480773926,0.5659999847412109,0.5646944642066956,0.566444456577301,0.5605972409248352,0.5617361068725586,0.5575000047683716]},\"selected\":{\"id\":\"2659\"},\"selection_policy\":{\"id\":\"2658\"}},\"id\":\"2557\",\"type\":\"ColumnDataSource\"},{\"attributes\":{\"line_alpha\":0.1,\"line_color\":\"#1f77b4\",\"line_width\":4,\"x\":{\"field\":\"x\"},\"y\":{\"field\":\"y\"}},\"id\":\"2559\",\"type\":\"Line\"},{\"attributes\":{},\"id\":\"2658\",\"type\":\"UnionRenderers\"},{\"attributes\":{\"data_source\":{\"id\":\"2557\"},\"glyph\":{\"id\":\"2558\"},\"hover_glyph\":null,\"muted_glyph\":null,\"nonselection_glyph\":{\"id\":\"2559\"},\"selection_glyph\":null,\"view\":{\"id\":\"2561\"}},\"id\":\"2560\",\"type\":\"GlyphRenderer\"},{\"attributes\":{\"line_color\":\"#1f77b4\",\"line_width\":4,\"x\":{\"field\":\"x\"},\"y\":{\"field\":\"y\"}},\"id\":\"2558\",\"type\":\"Line\"},{\"attributes\":{\"source\":{\"id\":\"2557\"}},\"id\":\"2561\",\"type\":\"CDSView\"},{\"attributes\":{},\"id\":\"2659\",\"type\":\"Selection\"},{\"attributes\":{\"axis_label\":\"Epochs\",\"axis_label_text_font_size\":\"20pt\",\"formatter\":{\"id\":\"2655\"},\"major_label_orientation\":1,\"major_label_text_font_size\":\"15pt\",\"minor_tick_line_color\":null,\"ticker\":{\"id\":\"2547\"}},\"id\":\"2546\",\"type\":\"LinearAxis\"},{\"attributes\":{\"axis\":{\"id\":\"2546\"},\"grid_line_color\":null,\"ticker\":null},\"id\":\"2549\",\"type\":\"Grid\"},{\"attributes\":{},\"id\":\"2657\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{},\"id\":\"2547\",\"type\":\"BasicTicker\"}],\"root_ids\":[\"2535\"]},\"title\":\"Bokeh Application\",\"version\":\"2.1.1\"}};\n",
-              "  var render_items = [{\"docid\":\"de2dcc81-ff20-4a2a-b31a-9decded8c392\",\"root_ids\":[\"2535\"],\"roots\":{\"2535\":\"81296d9f-f5a5-4e36-af60-c56ff65a9394\"}}];\n",
+              "  var docs_json = {\"9fd78b83-ffbc-4516-9eff-d43ab7cbb49f\":{\"roots\":{\"references\":[{\"attributes\":{\"below\":[{\"id\":\"3125\"}],\"center\":[{\"id\":\"3128\"},{\"id\":\"3132\"}],\"left\":[{\"id\":\"3129\"}],\"plot_height\":500,\"plot_width\":1000,\"renderers\":[{\"id\":\"3139\"}],\"title\":{\"id\":\"3115\"},\"toolbar\":{\"id\":\"3134\"},\"x_range\":{\"id\":\"3117\"},\"x_scale\":{\"id\":\"3121\"},\"y_range\":{\"id\":\"3119\"},\"y_scale\":{\"id\":\"3123\"}},\"id\":\"3114\",\"subtype\":\"Figure\",\"type\":\"Plot\"},{\"attributes\":{\"source\":{\"id\":\"3136\"}},\"id\":\"3140\",\"type\":\"CDSView\"},{\"attributes\":{},\"id\":\"3252\",\"type\":\"Selection\"},{\"attributes\":{},\"id\":\"3123\",\"type\":\"LinearScale\"},{\"attributes\":{\"axis_label\":\"Epochs\",\"axis_label_text_font_size\":\"20pt\",\"formatter\":{\"id\":\"3248\"},\"major_label_orientation\":1,\"major_label_text_font_size\":\"15pt\",\"minor_tick_line_color\":null,\"ticker\":{\"id\":\"3126\"}},\"id\":\"3125\",\"type\":\"LinearAxis\"},{\"attributes\":{},\"id\":\"3126\",\"type\":\"BasicTicker\"},{\"attributes\":{\"axis\":{\"id\":\"3125\"},\"grid_line_color\":null,\"ticker\":null},\"id\":\"3128\",\"type\":\"Grid\"},{\"attributes\":{\"axis_label\":\"Validation Accuracy\",\"axis_label_text_font_size\":\"20pt\",\"formatter\":{\"id\":\"3250\"},\"major_label_text_font_size\":\"15pt\",\"minor_tick_line_color\":null,\"ticker\":{\"id\":\"3130\"}},\"id\":\"3129\",\"type\":\"LinearAxis\"},{\"attributes\":{},\"id\":\"3130\",\"type\":\"BasicTicker\"},{\"attributes\":{\"axis\":{\"id\":\"3129\"},\"dimension\":1,\"ticker\":null},\"id\":\"3132\",\"type\":\"Grid\"},{\"attributes\":{},\"id\":\"3117\",\"type\":\"DataRange1d\"},{\"attributes\":{},\"id\":\"3133\",\"type\":\"SaveTool\"},{\"attributes\":{\"active_drag\":\"auto\",\"active_inspect\":\"auto\",\"active_multi\":null,\"active_scroll\":\"auto\",\"active_tap\":\"auto\",\"tools\":[{\"id\":\"3133\"}]},\"id\":\"3134\",\"type\":\"Toolbar\"},{\"attributes\":{},\"id\":\"3250\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{},\"id\":\"3248\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{\"data\":{\"x\":[1,2,3,4,5,6,7,8,9,10],\"y\":[0.5508055686950684,0.5596944689750671,0.5660971999168396,0.5687222480773926,0.5659999847412109,0.5646944642066956,0.566444456577301,0.5605972409248352,0.5617361068725586,0.5575000047683716]},\"selected\":{\"id\":\"3252\"},\"selection_policy\":{\"id\":\"3251\"}},\"id\":\"3136\",\"type\":\"ColumnDataSource\"},{\"attributes\":{},\"id\":\"3251\",\"type\":\"UnionRenderers\"},{\"attributes\":{\"text\":\"Validation Accuracy by Epoch\",\"text_font_size\":{\"value\":\"20pt\"}},\"id\":\"3115\",\"type\":\"Title\"},{\"attributes\":{\"line_alpha\":0.1,\"line_color\":\"#1f77b4\",\"line_width\":4,\"x\":{\"field\":\"x\"},\"y\":{\"field\":\"y\"}},\"id\":\"3138\",\"type\":\"Line\"},{\"attributes\":{\"data_source\":{\"id\":\"3136\"},\"glyph\":{\"id\":\"3137\"},\"hover_glyph\":null,\"muted_glyph\":null,\"nonselection_glyph\":{\"id\":\"3138\"},\"selection_glyph\":null,\"view\":{\"id\":\"3140\"}},\"id\":\"3139\",\"type\":\"GlyphRenderer\"},{\"attributes\":{\"line_color\":\"#1f77b4\",\"line_width\":4,\"x\":{\"field\":\"x\"},\"y\":{\"field\":\"y\"}},\"id\":\"3137\",\"type\":\"Line\"},{\"attributes\":{},\"id\":\"3119\",\"type\":\"DataRange1d\"},{\"attributes\":{},\"id\":\"3121\",\"type\":\"LinearScale\"}],\"root_ids\":[\"3114\"]},\"title\":\"Bokeh Application\",\"version\":\"2.1.1\"}};\n",
+              "  var render_items = [{\"docid\":\"9fd78b83-ffbc-4516-9eff-d43ab7cbb49f\",\"root_ids\":[\"3114\"],\"roots\":{\"3114\":\"2f11156d-6b6f-4998-a3a4-da1a8b422186\"}}];\n",
               "  root.Bokeh.embed.embed_items_notebook(docs_json, render_items);\n",
               "\n",
               "  }\n",
@@ -1895,7 +1898,7 @@
           "metadata": {
             "tags": [],
             "application/vnd.bokehjs_exec.v0+json": {
-              "id": "2535"
+              "id": "3114"
             }
           }
         }
